@@ -1,5 +1,10 @@
 2007-10-23  Mike Krüger <mkrueger@novell.com> 
 
+	* Gui/CSharpTextEditorExtension.cs: Fixed "Bug 335145 - Intellisense
+	  displays wrong entries for typeof statement".
+
+2007-10-23  Mike Krüger <mkrueger@novell.com> 
+
 	* Parser/Resolver.cs: Fixed "Bug 335133 - Intellisense does not display
 	  object members for interfaces".
 
